# SimplePasswordGuard

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
simplepasswordguard/: __init__.py  generator.py
test/: test_generator.py
